<resources>
    <string name="app_name">Wallpaper</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <style name="circleImageView" parent="">
        <item name="cornerFamily">rounded</item>
        <item name="cornerSize">50%</item>
    </style>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="set_as_wallpaper">Set as Wallpaper</string>
    <string name="set_as_lock_amp_home_screen"><![CDATA[Set as Lock & Home Screen]]></string>
    <string name="set_as_lock_screen">Set as Lock Screen</string>
    <string name="set_as_home_screen">Set as Home Screen</string>
    <string name="apply_now">Apply Now</string>
    <string name="cancel_button">Cancel Button</string>
    <string name="downloadbutton">downloadButton</string>
    <string name="romovefromfavourite">romoveFromFavourite</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="setting">Setting</string>
    <string name="favourite">Favourite</string>

</resources>