<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottum_sheet_design"

    >

    <RadioGroup
        android:id="@+id/radioButtonsGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        app:layout_constraintBottom_toTopOf="@+id/wallpaperApplyBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <RadioButton
            android:id="@+id/setAsLockAndHomeRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_lock_amp_home_screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/setASLockScreenRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_lock_screen"
            app:layout_constraintStart_toStartOf="@+id/setAsLockAndHomeRadioBtn"
            app:layout_constraintTop_toBottomOf="@+id/setAsLockAndHomeRadioBtn" />

        <RadioButton
            android:id="@+id/setAsHomeScreenRadioBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_as_home_screen"
            app:layout_constraintStart_toStartOf="@+id/setASLockScreenRadioBtn"
            app:layout_constraintTop_toBottomOf="@+id/setASLockScreenRadioBtn" />


    </RadioGroup>


    <ImageView
        android:id="@+id/close_ButtonSheet"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_bottum_sheet"
        android:clickable="true"
        tools:layout_editor_absoluteX="258dp"
        tools:layout_editor_absoluteY="25dp"
        android:focusable="true"
        android:contentDescription="@string/cancel_button" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/wallpaperApplyBtn"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:background="@drawable/set_as_wallpaper_btn_design"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/_30sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/apply_now"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="@dimen/_15sdp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonsGroup" />


</androidx.constraintlayout.widget.ConstraintLayout>